[package]
name = "corrosion"
version = "0.1.0"
authors = ["Brook Heisler <redattack34@gmail.com>"]

[features]
default = ["jit"]
vectorize = ["simd"]
cputrace = ["disasm"]
stacktrace = []
mousepick = []
function_disasm = ["disasm"]
disasm = []
jit = ["dynasmrt"]

[dependencies]
bitflags = "0.7"
quick-error = "1.1"
sdl2 = "0.25"
blip_buf = "0.1.4"
memmap = "0.4"
simd = { git = "https://github.com/huonw/simd", optional = true }
dynasm = { version = "0.1.1" }
dynasmrt = { version = "0.1.1", optional = true }

[dev-dependencies]
sha1 = "0.2"
rand = "0.3"

[profile.bench]
opt-level = 3
debug = true
lto = true
