[package]
name = "corrosion"
version = "0.1.0"
authors = ["Brook Heisler <redattack34@gmail.com>"]

[features]
default = []
vectorize = ["simd"]
debug_features = []

[dependencies]
bitflags = "0.9"
quick-error = "1.2"
sdl2 = "0.29"
blip_buf = "0.1.4"
memmap = "0.5"
simd = { version = "0.2", optional = true }
dynasm = "0.1.2"
fnv = "1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
dynasmrt = "0.1.1"

[dependencies.nom]
version = "3.2"
features = ["nightly"]

[dev-dependencies]
sha1 = "0.2"
rand = "0.3"

[profile.bench]
opt-level = 3
debug = true
lto = true
